--- a/express playground/index.html
+++ b/express playground/index.html
@@ -1,10 +1,13 @@
 <html>
 <body>
-<form action="http://127.0.0.1:8081/process_get" method="GET">
-First Name: <input type="text" name="first_name">  <br>
-
-Last Name: <input type="text" name="last_name">
-<input type="submit" value="Submit">
-</form>
+	<form action="http://127.0.0.1:8081/listUsers">
+		<button>List Users</button>
+	</form>
+	<form action="http://127.0.0.1:8081/addUser">
+		<button>Add User</button>
+	</form>
+	<form action="http://127.0.0.1:8081/deleteUser">
+		<button>Delete Users</button>
+	</form>
 </body>
 </html>
